--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/student
 spring.datasource.username=root
-spring.datasource.password=danielk20
+spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 server.error.include-message=always
